@@ -1,4 +1,5 @@
 - fix opening the right RPM DB with --env
+- workaround looping in URPM->traverse_tag when using --env
 
 Version 4.18.1 - 9 September 2008, Thierry Vignaud
 
